--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -26,6 +26,6 @@
     <%}%></h2>
     <br>
     <br>
-<!-- <a href="/library">Back to the library</a> -->
+<a href="/">Back to the library</a>
 </body>
 </html>
