--- a/views/books/edit.ejs
+++ b/views/books/edit.ejs
@@ -6,17 +6,17 @@
 <body>
   <h1>Edit Your Library</h1>
 
-  <form method="POST" action='/book/<%=book.id%>?_method=PUT'>
+  <form method="POST" action='/books/<%=book.id%>?_method=PUT'>
     Title: <input type="text" name="title" value="<%=book.title%>">
     author: <input type="text" name="author" value="<%=book.author%>">
     publishDate: <input type="text" name="publish date" value="<%=book.publishDate%>">
     ISBN: <input type="text" name="ISBN">
-    currentlyReading: <input type="checkbox" name=" currently reading"
+    currentlyReading: <input type="checkbox" name="currentlyReading"
     <% if(book.currentlyReading === true){%>
     checked
     <%}%>
     >
-    read: <input type="checkbox" name="read"<% if(book.read === true){%>
+    read: <input type="checkbox" name="currentlyReading"<% if(book.read === true){%>
     checked
     <%}%>
     >
