--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -6,7 +6,7 @@
 <body>
   <h1>Add A New Book To Your Collecion</h1>
 
-  <form action='/book' method='POST'>
+  <form action='/books' method='POST'>
     Title: <input type="text" name="title"><br>
     Author: <input type="text" name="author"><br>
     Publish Date: <input type="text" name="publishDate"><br>
