--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Library</title>
-</head>
-<body>
+<%- include('../partials/header'); -%>
+
+
+  <li><a href="/">Home</a></li>
   <h1>Books In Your Library</h1>
-  <nav>
+<nav>
   <a href="/books/new">Add a new book</a>
 </nav>
   <ul>
@@ -32,5 +30,7 @@
     </li>
   </ul>
 
-</body>
-</html>
+
+
+
+<%- include('../partials/footer'); -%>
