--- a/views/books/new.ejs
+++ b/views/books/new.ejs
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>NEW BOOK</title>
-</head>
-<body>
+<%- include('../partials/header'); -%>
+
+
+
+
   <h1>Add A New Book To Your Collecion</h1>
 
   <form action='/books' method='POST'>
@@ -17,5 +16,6 @@
 
   </form>
 
-</body>
-</html>
+
+
+<%- include('../partials/footer'); -%>
