--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Book Page</title>
-</head>
-<body>
+<%- include('../partials/header'); -%>
+
+
 <h1>Book Page</h1>
 <br><br>
   <h2>Title: <%= book.title%> </h2>
@@ -27,8 +24,8 @@
     <br>
     <br>
 <a href="/">Back to the library</a>
-</body>
-<script src="scripts/googlebooks.js"></script>
 
 
-</html>
+
+
+<%- include('../partials/footer'); -%>
