--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>My Little Library</title>
-</head>
-<body>
+<%- include('./partials/header'); -%>
+
+
 <h1>Welcome to your library</h1>
 <nav>
   <ul>
@@ -11,5 +8,7 @@
     <li><a href="/books">Books</a></li>
   </ul>
 </nav>
-</body>
-</html>
+
+
+
+<%- include('./partials/footer'); -%>
