api call works, just not as intended

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -4,7 +4,7 @@
   <li><a href="/">Home</a></li>
   <h1>Books In Your Library</h1>
 <nav>
-  <a href="/books/new">Add a new book</a>
+  <a href="/books/search">Add a new book</a>
 </nav>
   <ul>
 
