--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,9 +14,13 @@
 </div>
 
     
+
+
+
+
+<!-- <script type="text/javascript" src='/scripts/googlebooks.js'></script> -->
 </body>
 
-<script src="scripts/googlebooks.js"></script>
 </html>
 
 
