--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <h1>Welcome to your library</h1>
 <nav>
   <ul>
-    <li><a href="/authors">Authors</a></li>
+    <!-- <li><a href="/authors">Authors</a></li> -->
     <li><a href="/books">Books</a></li>
   </ul>
 </nav>
