--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href="/style.css">
   <!-- Linking in Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous" type="text/css">
+  <link rel="stylesheet" type="text/css" href="">
+  <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- Google Fonts -->
   <link type="text/css" href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
 </head>
